--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "flash": "^1.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
-    "popups": "^1.1.3"
+    "node-2fa": "^2.0.3",
+    "popups": "^1.1.3",
+    "qrcode": "^1.5.0",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {},
   "description": ""
